# config/routes.rb
@@ -11,33 +11,34 @@ Rails.application.routes.draw do
 #			match 'desc', to: 'semantics#show',           via: 'get'
 #			match 'desc/info', to: 'semantics#show_info', via: 'get'
 #			match 'desc/example', to: 'semantics#show_example', via: 'get'
-			match 'active',           to: 'processes#active',       via: 'get'
-			match 'init',             to: 'processes#init',         via: 'post'
-			match 'meta',             to: 'semantics#create',       via: 'post'
-			match 'meta',             to: 'semantics#show',	        via: 'get'
-			match 'meta/info',        to: 'semantics#show_info',    via: 'get'
-			match 'meta/usage',       to: 'semantics#show_usage',   via: 'get'
-			match 'meta/example',     to: 'semantics#show_example', via: 'get'
-			match 'data',             to: 'stores#index',           via: 'get'
-			match 'data/plain',       to: 'stores#plain',           via: 'get'
-			match 'data/full',        to: 'stores#full',            via: 'get'
-			match 'data/provision',   to: 'stores#provision',       via: 'get'
-			match 'data/:id',         to: 'stores#show',            via: 'get'
-			match 'data',             to: 'stores#write',           via: 'post'
-			match 'info',             to: 'infos#index',            via: 'get'
-			match 'log',              to: 'logs#index',             via: 'get'
-  
-			match 'receipts',         to: 'receipts#index',         via: 'get'
-			match 'receipt/:id',      to: 'receipts#show',          via: 'get'
-			match 'receipt/:ttl/:id', to: 'receipts#show',          via: 'get'
-			match 'rcpt/:id',         to: 'receipts#show',          via: 'get', defaults: { short: "TRUE" }
-			match 'rcpt/:ttl/:id',    to: 'receipts#show',          via: 'get', defaults: { short: "TRUE" }
-			match 'receipt/:id',      to: 'receipts#create',        via: 'post'
-			match 'receipt',          to: 'receipts#create',        via: 'post'
-  
-			match 'buy',              to: 'payments#buy',           via: 'post'
-			match 'paid',             to: 'payments#paid',          via: 'get'
-			match 'payments',         to: 'payments#payments',      via: 'get'
+			match 'active',             to: 'processes#active',       via: 'get'
+			match 'init',               to: 'processes#init',         via: 'post'
+			match 'meta',               to: 'semantics#create',       via: 'post'
+			match 'meta',               to: 'semantics#show',	        via: 'get'
+			match 'meta/info',          to: 'semantics#show_info',    via: 'get'
+			match 'meta/usage',         to: 'semantics#show_usage',   via: 'get'
+			match 'meta/example',       to: 'semantics#show_example', via: 'get'
+			match 'data',               to: 'stores#index',           via: 'get'
+			match 'data/plain',         to: 'stores#plain',           via: 'get'
+			match 'data/full',          to: 'stores#full',            via: 'get'
+			match 'data/provision',     to: 'stores#provision',       via: 'get'
+			match 'data/:id',           to: 'stores#show',            via: 'get'
+			match 'data',               to: 'stores#write',           via: 'post'
+			match 'info',               to: 'infos#index',            via: 'get'
+			match 'log',                to: 'logs#index',             via: 'get'
+    
+			match 'receipts',           to: 'receipts#index',         via: 'get'
+			match 'receipt/:id',        to: 'receipts#show',          via: 'get'
+			match 'receipt/:ttl/:id',   to: 'receipts#show',          via: 'get'
+			match 'receipt/:id/revoke', to: 'receipts#revoke',        via: 'delete' 
+			match 'rcpt/:id',           to: 'receipts#show',          via: 'get', defaults: { short: "TRUE" }
+			match 'rcpt/:ttl/:id',      to: 'receipts#show',          via: 'get', defaults: { short: "TRUE" }
+			match 'receipt/:id',        to: 'receipts#create',        via: 'post'
+			match 'receipt',            to: 'receipts#create',        via: 'post'
+    
+			match 'buy',                to: 'payments#buy',           via: 'post'
+			match 'paid',               to: 'payments#paid',          via: 'get'
+			match 'payments',           to: 'payments#payments',      via: 'get'
 
 			#watermarking
 			match 'data/fragment/:fragment_id', 
